--- a/compass/package.json
+++ b/compass/package.json
@@ -9,8 +9,10 @@
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-password-checklist": "^1.4.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
