--- a/compass/package.json
+++ b/compass/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.7",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-password-checklist": "^1.4.3",
