--- a/compass/package.json
+++ b/compass/package.json
@@ -16,12 +16,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-calendar": "^4.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.1",
